--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "fs": "0.0.1-security",
     "mongoose": "^5.8.7",
     "multer": "^1.4.2"
+  },
+  "engines": {
+    "node": "10.19.0"
   }
 }
