--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "ng build",
+    "heroku-postbuild": "ng build --prod"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +19,7 @@
     "multer": "^1.4.2"
   },
   "engines": {
-    "node": "10.19.0"
+    "node": "10.19.0",
+    "npm": "6.13.4"
   }
 }
