--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fasion-store-node",
+  "name": "zero-node",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "mongoose": "^5.8.7",
+    "nodemon": "^1.19.2",
     "multer": "^1.4.2"
   },
   "engines": {
