--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "fs": "0.0.1-security",
     "mongoose": "^5.8.7",
     "nodemon": "^1.19.2",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "tslib": "^1.11.0",
+    "typescript": "~3.4.3",
+    "zone.js": "~0.9.1"
   },
   "engines": {
     "node": "10.19.0",
