--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "zero-node",
   "version": "1.0.0",
-  "description": "",
+  "description": "This example is so cool.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "example",
+    "heroku"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
