--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This example is so cool.",
   "main": "index.js",
   "scripts": {
-    "build": "bower install && grunt build",
+    "build": "npm install",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
